11_ingress/service.yml
kind: Service
apiVersion: v1
metadata:
  name: snl-backend-service
  namespace: snl
spec:
  selector:
    app: snl-backend # name of the pod which we want to expose
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: ws
      protocol: TCP
      port: 9999
      targetPort: 9999
  type: ClusterIP
