11_ingress/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-snl-ingress
  namespace: snl
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /app(/|$)(.*) # Rewrite /app to /
            pathType: ImplementationSpecific
            backend:
              service:
                name: snl-backend-service
                port:
                  number: 8080
          - path: /ws(/|$)(.*) # Rewrite /ws to /
            pathType: ImplementationSpecific
            backend:
              service:
                name: snl-backend-service
                port:
                  number: 9999
